--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   scroll-behavior: smooth;
 }
 
+body {
+  width: 100vw;
+}
+
 .landing-sub-title {
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
